--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   beamer: ^1.4.1+1
+  diacritic: ^0.1.3
 
 dev_dependencies:
   flutter_test:
